--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="./Spotify_favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Spotify Images/Spotify_favicon.png" type="image/x-icon">
 </head>
 
 <body>
+
     <div class="sidebar">
         <div class="logo">
-            <a href="./Spotify Logo.png" alt="Logo">
-
+            <a href="">
+                <img src="./Spotify Images/Spotify Logo.png" alt="Logo">
             </a>
         </div>
 
@@ -24,10 +26,62 @@
                         <span>Home</span>
                     </a>
                 </li>
+                <li>
+                    <a href="">
+                        <span class="fa fa-search"></span>
+                        <span>Search</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="fa fas fa-book"></span>
+                        <span>Your Library</span>
+                    </a>
+                </li>
             </ul>
         </div>
 
+        <div class="navigation">
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="fa fa-plus"></span>
+                        <span>Create Playlist</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="fa fa-heart"></span>
+                        <span>Liked Songs</span>
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+
+        <div class="policies">
+            <ul>
+                <li>
+                    <a href="">Cookies</a>
+                </li>
+                <li>
+                    <a href="">Privacy</a>
+                </li>
+            </ul>
+        </div>
+
+
     </div>
+    <div class="main-container">
+        <div class="topbar">
+            <div class="previous-next-buttons">
+                <button type="button" class="fa fas fa-chevron-left"></button>
+                <button type="button" class="fa fas fa-chevron-right"></button>
+            </div>
+        </div>
+    </div>
+
+    
     <script src="https://kit.fontawesome.com/ef9a692198.js" crossorigin="anonymous">
 
     </script>
